TEST new fueature: reconnect Muse using Admin app when possible